--- a/Graphics/Tile/MainPage.xaml
+++ b/Graphics/Tile/MainPage.xaml
@@ -8,6 +8,6 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <Button Content="Update Tile" Click="UpdateTile_Click" />
     </Grid>
 </Page>
